--- a/src/components/sketchfab.css
+++ b/src/components/sketchfab.css
@@ -6,7 +6,23 @@
   width: 100%;
   height: 300px;
   border: none;
-  border-radius: 0.5rem;
+}
 
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+/* media queries: mobile first */
+@media (min-width: 480px) {
+  /* mobile */
+}
+
+@media (min-width: 768px) {
+  /* tablet: 768 or higher */
+  .sketchfab-embed-wrapper iframe {
+    height: 400px;
+  }
+}
+
+@media (min-width: 1024px) {
+  /* desktop: 1024px or higher */
+  .sketchfab-embed-wrapper iframe {
+    height: 500px;
+  }
 }
